// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagFilterList tests renders correctly 1`] = `
<div>
  <div class="sk-tag-filter-list">
    <div class="sk-tag-filter">test option 1</div>
    <div class="sk-tag-filter">test option 2</div>
  </div>
</div>
`;

exports[`option 1 active, option 2 active 1`] = `
<div>
  <div class="sk-tag-filter-list">
    <div class="sk-tag-filter is-active">test option 1</div>
    <div class="sk-tag-filter is-active">test option 2</div>
  </div>
</div>
`;

exports[`option 1 active, option 2 not active 1`] = `
<div>
  <div class="sk-tag-filter-list">
    <div class="sk-tag-filter is-active">test option 1</div>
    <div class="sk-tag-filter">test option 2</div>
  </div>
</div>
`;

exports[`option 1 not active, option 2 active 1`] = `
<div>
  <div class="sk-tag-filter-list">
    <div class="sk-tag-filter">test option 1</div>
    <div class="sk-tag-filter is-active">test option 2</div>
  </div>
</div>
`;
